--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ repositories {
 
 dependencies { //의존성 선언
     compile('org.springframework.boot:spring-boot-starter-web:')
+    compile('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test:')
 }
