--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,6 @@ dependencies { //의존성 선
     compile('org.springframework.boot:spring-boot-starter-data-jpa') //jpa 추상화 라이브러리
     compile('com.h2database:h2') //별도 설치 없이 의존성만으로 관리 가능, 애플리케이션 시작할때마다 초기화됨
     compile('org.springframework.boot:spring-boot-starter-mustache') //머스테치 추가
+    compile('org.springframework.boot:spring-boot-starter-security') //스프링시큐리티
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client') // 스프링 시큐리티 관련 의존성
 }
