--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,6 @@ dependencies { //의존성 선
     compile('org.springframework.boot:spring-boot-starter-oauth2-client') // 스프링 시큐리티 관련 의존성
     compile('org.springframework.session:spring-session-jdbc')
     testCompile("org.springframework.security:spring-security-test")
+    compile("org.mariadb.jdbc:mariadb-java-client")
 
 }
