--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group 'org.ehl3288,book'
+group 'org.ehl3288.book'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
